# deno-serialport

./: .gitignore  Cargo.toml  README.md  deno.jsonc  ffi.ts  loader.ts  mod.ts
.github/workflows/: build.yml
examples/: echo.ts  list.ts  using.ts
knowledge/: Implementation_plan.md
src/: lib.rs
