[package]
name = "deno_serial_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FFI cdylib for Deno serial port bindings (blocking serialport-rs)"
repository = "https://github.com/takker99/deno-serialport"

[lib]
name = "deno_serial"
crate-type = ["cdylib"]

[dependencies]
serialport = { version = "4", default-features = false }
once_cell = "1"
slab = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winbase",
  "handleapi",
  "synchapi",
  "ioapiset",
  "errhandlingapi",
] }

[profile.release]
lto = true
codegen-units = 1
